k8s/applications/tools/kromgo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kromgo
  namespace: kromgo
  labels:
    app: kromgo
spec:
  type: ClusterIP
  selector:
    app: kromgo
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 8081
      targetPort: metrics
