k8s/applications/tools/kromgo/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kromgo
  namespace: kromgo
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - badges.k8s.eudald.gr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kromgo
          port: 80
